[package]
name = "monero-interface"
version = "0.1.0"
description = "Traits for interfacing with the Monero network, built around monero-oxide"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/main/monero-oxide/interface"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { version = "0.1.5", default-features = false }

thiserror = { version = "2", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }

monero-oxide = { path = "..", default-features = false }

[features]
std = [
  "std-shims/std",

  "thiserror/std",

  "zeroize/std",
  "hex/std",

  "monero-oxide/std",
]
default = ["std"]
