[package]
name = "monero-primitives"
version = "0.1.0"
description = "Primitives for the Monero protocol"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/main/monero-oxide/primitives"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.66"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { version = "0.1.5", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

sha3 = { version = "0.10", default-features = false }

monero-io = { path = "../io", version = "0.1", default-features = false }
monero-ed25519 = { path = "../ed25519", version = "0.1", default-features = false }

[dev-dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[features]
std = [
  "std-shims/std",

  "zeroize/std",

  "sha3/std",

  "monero-io/std",
  "monero-ed25519/std",
]
default = ["std"]
