[package]
name = "monero-oxide-no-std-tests"
version = "0.1.0"
description = "A crate to test no-std builds of monero-oxide crates work"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/main/tests/no-std"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["nostd", "no_std", "alloc"]
edition = "2021"
publish = false
rust-version = "1.89"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
monero-epee = { path = "../../monero-oxide/epee" }
monero-epee-traits = { path = "../../monero-oxide/epee/traits", optional = true }
monero-epee-derive = { path = "../../monero-oxide/epee/derive", optional = true }

monero-wallet = { path = "../../monero-oxide/wallet", default-features = false, features = ["compile-time-generators"], optional = true }

[features]
alloc = ["monero-epee-traits", "monero-epee-derive", "monero-wallet"]
