[package]
name = "monero-daemon-rpc"
version = "0.1.0"
description = "An interface to a Monero daemon"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/main/monero-oxide/interface/daemon"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.89"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = { version = "0.1.5", default-features = false }

hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }

monero-oxide = { path = "../..", default-features = false }
monero-address = { path = "../../wallet/address", default-features = false }
monero-interface = { path = "..", default-features = false }

monero-epee-traits = { git = "https://github.com/kayabaNerve/monero-oxide", rev = "20d2cd224d5f58d8ffbc73d1e7a75a474864516d"}
monero-epee-derive = { git = "https://github.com/kayabaNerve/monero-oxide", rev = "20d2cd224d5f58d8ffbc73d1e7a75a474864516d"}

[features]
std = [
  "std-shims/std",

  "hex/std",
  "serde/std",
  "serde_json/std",

  "monero-oxide/std",
  "monero-address/std",
  "monero-interface/std",
]
default = ["std"]
